# GGJ-2023

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
code/: CMakeLists.txt
code/include/: ServiceLocator.h  header.h.in
code/include/Dialogue/: Dialogue.h
code/include/UI/: Button.h  UiController.h  UiManager.h  UiModel.h  UiView.h
code/include/audio/: AudioManager.h  audio_manager.h
code/include/character/: Character.h  NPC.h  RandomNPC.h  player.h
code/include/render/: Renderer.h
code/include/scene/: MainMenu.h  Overworld.h  SceneManager.h
code/include/system/: Animator.h  Collision.h  GameEventManager.h  InputManager.h  Observer.hpp  Settings.h  components.h  entity.h  object.h  tile_manager.h
code/include/utils/: Localization.h  Logs.h  Time.h
code/src/: ServiceLocator.cpp  animation.hpp  game_context.hpp  header.h  main.cpp  object.hpp  overworld.hpp  player.hpp  scene_manager.hpp  tile_manager.hpp
code/src/UI/: Button.cpp  UiController.cpp  UiManager.cpp  UiModel.cpp  UiView.cpp
code/src/audio/: AudioManager.cpp  audio_manager.cpp  audio_manager.hpp
code/src/character/: Character.cpp  NPC.cpp  (+4 more)
code/tool/: csvExample.csv  csvToJson.js  csvToJsonTile.js  output.json  tile.json
local/: koga.psd
resources/: World_A2.tsx  test_parser.txt  test_tile_data  test_tile_data.txt
resources/Dialogue/: brady.json  johnson.json
resources/Localization/: localization.csv  localization.json
resources/NPC/: Overworld.json
resources/maps/: Dungeon_A1.tsx  Outside_A2.tsx  Outside_A3.tsx  Outside_B.tsx  prologue.json  prologue.tiled-session  prologue.tmx  prologue.tsx  prologue.txt  test.json  test.tmx  test.tsx  test.txt  test1.text  test1.txt  untitled.json  untitled.tiled-session  untitled.tmx  untitled.txt  untitled1.json  world.tmx  world.txt
resources/settings/: Settings.json
(+29 files in other folders)
